--- a/index.html
+++ b/index.html
@@ -14,15 +14,75 @@
 
 <body>
     <section class="flexible-container">
-        <div class="half-width intro">
+        <div class="half-width intro writing-area">
             <h1><span class="orange-color">Skip</span> The Diet, Just Eat Healthy With Food Network</h1>
-            <p>Our healthy, delicious and nutritious food will cut the need of a diet for you in daily life!</p>
+            <p>Our healthy, delicious and nutritious food will cut the need of a diet for you in daily life!</p><br>
             <a class="button" target="_blank" href="https://en.wikipedia.org/wiki/Food_delivery">Order Food</a>
         </div>
         <div class="half-width">
             <img src="images/Group 8425.png" alt="">
         </div>
     </section>
+    <section class="flexible-container about-me font-thinner">
+        <div class="half-width">
+            <img src="images/foodie.png" alt="">
+        </div>
+        <div class="half-width">
+            <h2>About Me</h2>
+            <p>
+                Healthy Food is the key concept of my sound health and sound mind. At a point of my life i started to
+                stop eating junk foods and started making habit of taking less oily food. At a point of that journey , I
+                realized that green food is the affordable solution to this problem. For first couple of months , it was
+                not an easy journey. I tried hard and fast, agin and again. And now I am the founder of Food Network.
+            </p><br>
+            <a class="button" target="_blank" href="https://en.wikipedia.org/wiki/William_Shakespeare">Contact Me</a>
+        </div>
+    </section>
+    <section class="recipie-part">
+        <div class="recipie">
+            <h2>My Recipies</h2>
+            <p>In my inspired boosted pumped menu , I have 3 items which are unique by their taste. I wil show you
+                today my unique recipies .</p>
+        </div>
+        <div class="flexible-container">
+            <div class="fix-width">
+                <img src="images/Project Cover5.png" alt="">
+                <h3>Gajorer Vorta</h3>
+                <p>This vorta is a traditional unfamiliar food which is prepared with carrot, a healthy vegetable.</p>
+            </div>
+            <div class="fix-width">
+                <img src="images/Project Cover6.png" alt="">
+                <h3>Prawn Curry</h3>
+                <p>This curry is a traditional familiar food which is prepared with prawn, a delicious item to feed your
+                    hunger.</p>
+            </div>
+            <div class="fix-width">
+                <img src="images/Project Cover7.png" alt="">
+                <h3>Kacchi</h3>
+                <p>Kacchi is a renowned dish and the most popular dish from our menu. We give it a uncoventional touch
+                    using less oil , yet the taste is unreal. </p>
+            </div>
+        </div>
+    </section>
+    <section class="flexible-container followers">
+        <div class="followers-map">
+            <h1>700k</h1>
+            <p>Youtube Subscribers</p>
+        </div>
+        <div class="followers-map">
+            <h1>2.4m</h1>
+            <p>Instagram Followers</p>
+        </div>
+        <div class="followers-map">
+            <h1>100k</h1>
+            <p>Dribble Shot Likes</p>
+        </div>
+    </section>
+    <footer>
+        <h3><span class="orange-color">FOOD</span> NETWORK</h3>
+        <p>Eat healthy to live healthy. Live healthy to live happy.</p>
+    </footer>
+
 
 
 </html>
